src/objects/Commercial_Entitlement__c/Commercial_Entitlement__c.object-meta.xml
<CustomObject>
    <description>Object to store commercial entitlements for customers.</description>
    <label>Commercial Entitlement</label>
    <nameField>
        <displayFormat>CE-{00000000}</displayFormat>
        <label>Commercial Entitlement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>