src/objects/Commercial_Entitlement__c/fields/Authorised_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Authorised Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>