src/objects/Commercial_Entitlement__c/fields/QTO_Sold_To_Party_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>QTO_Sold_To_Party_Country_Code__c</fullName>
    <formula>Text(Sold_To_Party__r.BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To Party Country Code</label>
    <type>Text</type>
</CustomField>