src/objects/Commercial_Entitlement__c/fields/QTO_Sold_To_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>QTO_Sold_To_SAP_ID__c</fullName>
    <formula>Sold_To_Party__r.NCP_P20_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To SAP ID</label>
    <type>Text</type>
</CustomField>