src/objects/Commercial_Entitlement__c/fields/Sold_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sold To Party</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.Parent_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commercial Entitlements (Sold To Party)</relationshipLabel>
    <relationshipName>Commercial_Entitlements1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>