src/objects/Commercial_Entitlement__c/recordTypes/Commercial_Entitlement.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Entitlement</fullName>
    <active>true</active>
    <label>Commercial Entitlement</label>
</RecordType>