src/objects/Commercial_Entitlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Technology__c</columns>
    <columns>Use_Case__c</columns>
    <columns>Authorised_Quantity__c</columns>
    <columns>Consumed_Quantity__c</columns>
    <columns>Activated_Quantity__c</columns>
    <columns>Available_Quantity__c</columns>
    <columns>Sold_To_Party__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>QTO_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>